Fix annoying 1-pixel layout issue in search.

--- a/solr/htdocs/components/71_solr_search.css
+++ b/solr/htdocs/components/71_solr_search.css
@@ -97,7 +97,7 @@
 }
 
 .se_search .search_table_holder {
-  margin-top: 88px;
+  margin-top: 90px;
   padding: 8px;
 }
 
